# Vendor

./: .dockerignore  .env.example  .gitignore  .restyled.yaml  Dockerfile  Procfile  README.md  db.py  docker-compose-test.yml  docker-compose.yml  main.py  models.py  pyproject.toml  tests_pre_start.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: bandit.yml  black.yml  build_images.yml  codecov.yml  flake8.yml  isort.yml  pylint.yml  pytest.yml  tag_and_push.yml
api/v1/: product.py  vendor.py
core/: config.py  loger.py  settings.py  settings.yaml
scripts/: fastApi-test.sh
tests/: .env.test  __init__.py  conftest.py  data.py  settings.py  test_product_api.py  test_vendor_api.py  tests_pre_start.py
tests/scripts/: test-entrypoint.sh
